# kafka-tutorial

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
module-1/: quickstart.ipynb  quickstart.py
module-2/: topics_and_partitions.ipynb  topics_and_partitions.py
module-3/: consumer_groups.ipynb  consumer_groups.py
module-4/: replication.ipynb  replication.py
module-5/: kraft_deep_dive.ipynb  kraft_deep_dive.py
module-6/: advanced_producer.ipynb  advanced_producer.py
module-7/: advanced_consumer.ipynb  advanced_consumer.py
module-8/: docker-compose.yml  taskiq_integration.ipynb  taskiq_integration.py
